Move example toc up, clean up headings HTML

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 				eye patch.</p>
 		</blockquote>
 
-		<h2>
-			<a name="yep" class="anchor" href="#yep"><span class="octicon octicon-link"></span></a>Yep
-		</h2>
+		<h2 id="yep">Yep</h2>
 
 		<ul>
 			<li>Mobile First</li>
@@ -60,21 +58,52 @@
 			<li>Semantic Grid</li>
 			<li><a href="http://en.wikipedia.org/wiki/You_aren't_gonna_need_it">YAGNI</a></li>
 		</ul>
-		<h2>
-			<a name="nope" class="anchor" href="#nope"><span
-				class="octicon octicon-link"></span></a>Nope</h2>
+
+		<h2 id="nope">Nope</h2>
 
 		<ul>
 			<li>IE &lt; 9 pretty-printing</li>
 			<li>Pixel perfect percentage rounding (especially in Safari)</li>
 			<li>Nested columns</li>
 		</ul>
-		<h2>
-			<a name="api" class="anchor" href="#api"><span class="octicon octicon-link"></span></a>API
-		</h2>
+
+		<h2 id="examples">Examples</h2>
+
+		<ul>
+			<li>
+				<a href="sample/succinct.html">Succinct</a>
+				<br>
+				Minimalistic example.
+			</li>
+			<li>
+				<a href="sample/oocsxorcist.html">OOCSXorcist</a>
+				<br>
+				Like the succinct example, but overrides the grid context selector.
+			</li>
+			<li>
+				<a href="sample/stretch.html">Stretch</a>
+				<br>
+				Like the succinct example, in a container element and without
+				horizontal whitespace.
+			</li>
+			<li>
+				<a href="sample/parent.html">Parent</a>
+				<br>
+				Like the succinct example, in a container element with an initial
+				max-width that is reset by passing the container selector as argument
+				to the <code>@parent-selector</code> parameter.
+			</li>
+			<li>
+				<a href="sample/verbose.html">Verbose</a>
+				<br>
+				Example with all parameters.
+			</li>
+		</ul>
+
+		<h2 id="api">API</h2>
 
 		<p>The API consists of a single global <code>.grid</code> mixin function with the following
-			parameters:</p>
+		parameters:</p>
 
 		<ul>
 			<li>
@@ -113,41 +142,7 @@
 			</li>
 		</ul>
 
-		<h2>Examples</h2>
-
-		<ul>
-			<li>
-				<a href="sample/succinct.html">Succinct</a>
-				<br>
-				Minimalistic example.
-			</li>
-			<li>
-				<a href="sample/oocsxorcist.html">OOCSXorcist</a>
-				<br>
-				Like the succinct example, but overrides the grid context selector.
-			</li>
-			<li>
-				<a href="sample/stretch.html">Stretch</a>
-				<br>
-				Like the succinct example, in a container element and without
-				horizontal whitespace.
-			</li>
-			<li>
-				<a href="sample/parent.html">Parent</a>
-				<br>
-				Like the succinct example, in a container element with an initial
-				max-width that is reset by passing the container selector as argument
-				to the <code>@parent-selector</code> parameter.
-			</li>
-			<li>
-				<a href="sample/verbose.html">Verbose</a>
-				<br>
-				Example with all parameters.
-			</li>
-		</ul>
-
-		<h2><a name="license" class="anchor" href="#license"><span
-			class="octicon octicon-link"></span></a>License</h2>
+		<h2 id="license">License</h2>
 
 		<p>MIT</p>
 	</section>
